# imu-mujoco-bridge

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.github/workflows/: ci.yml
docs/: PRESEARCH.md  SYNTHETIC_TEST_PLAN.md
e2e/: lab.spec.ts  twin.spec.ts
firmware/: platformio.ini
firmware/include/: config.example.h
firmware/src/: main.cpp
models/: orientation_probe.xml
scripts/: lab  record-twin-video  verify
src/imu_mujoco_bridge/: __init__.py  camera_marker.py  demo.py  export_replay.py  flow_demo.py  mujoco_viewer.py  packet.py  render_demo.py  udp.py  virtual_device.py
tests/: test_camera_marker.py  test_export_replay.py  test_flow_demo.py  test_packet.py  test_render_demo.py  test_udp.py  test_virtual_device.py
web/: lab.css  lab.html  lab.js  replay.js  twin-models.js  twin.css  twin.html  twin.js
